# wmidl

./: .editorconfig  CMakeLists.txt
src/: config.h  tools.h
src/widl/: CMakeLists.txt  client.c  hash.c  header.c  parser.lex.c  parser.tab.c  parser.tab.h  ppl.lex.c  ppy.tab.c  ppy.tab.h  proxy.c  server.c  typelib.h  widl.c  widltypes.h  write_msft.c
src/wrc/: ppy.y
